--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,9 +41,9 @@ jobs:
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@v3.5.0 #v3.1.1
+        uses: sigstore/cosign-installer@v3.3.0
         with:
-          cosign-release: 'v3.5.0'
+          cosign-release: 'v2.2.2' # optional
 
       # Set up BuildKit Docker container builder to be able to build
       # multi-platform images and export cache
